2002-03-16  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.glade: Added `automatic scaling' and `show iteration
	results' buttons.  Added `max iterations' and `max time' buttons.

2002-03-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-sheet-order.c (dialog_sheet_order) : some
	beautification
	NOTE: To compile, this requires today's cvs version of gal
	* sheet-order.glade : some beautification

2002-03-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-sheet-name.c : removed
	* sheet-rename.glade : removed
	* dialogs.h : removed ref to dialog_sheet_name
	* Makefile.am : removed dialog-sheet-name.c and 
	  sheet-rename.glade

2002-03-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-sheet-order.c : support changes to tab colors.
	* sheet-order.glade : rearrange to allow for color pickers

2002-03-15  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (cb_dialog_solve_clicked): Changes related to
	the enumeration of the solver's status type.
	(cb_dialog_solve_clicked): Fixed a crash when the specified target
	cell was empty.
	(cb_dialog_solve_clicked): Added != NULL check before free.

2002-03-14  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-sheet-order.c : support showing the color
	  of colored tabs

2002-03-14  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (cb_dialog_solve_clicked): If the problem is
	infeasible report it as such.

2002-03-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* merge.glade : new dialog for the Merge tool
	* dialog-merge.c : newly implemented Merge tool
	* dialogs.h (dialog_merge) : new
	* Makefile.am : add dialog-merge.c and merge.glade

2002-03-12  Morten Welinder  <terra@diku.dk>

	* dialog-search.c (dialog_search): Drop the dummy state.  Newest
	gal no longer needs it.

2002-03-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-search.c : hook-up help button
	* search.glade : ditto

2002-03-11  Andreas J. Guelzow <aguelzow@taliesin.ca>
